--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--
+      Add font from Adobe
+    -->
+    <link rel="stylesheet" href="https://use.typekit.net/iag0xbk.css">
     <title>Hack Cambridge Atlas</title>
   </head>
   <body>
